...
    <string name="dialog_title_third_party_licences">Third party licences</string>

    <!-- splash screen accessibility -->
    <string name="loading">Loading…</string>

    <!-- button names -->
    <string name="ok">OK</string>
    <string name="later">Later</string>
    <string name="permalink">Permalink</string>
    <string name="view_source">View Source</string>
    <string name="view_decrypted_source">View Decrypted Source</string>
    <string name="none">None</string>
    <string name="report_content">Report Content</string>
...

    <!-- medias slider string -->
    <string name="media_slider_saved">Saved</string>
    <string name="media_slider_saved_message">Save to downloads?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="_continue">Continue</string>
    <string name="continue_anyway">Continue Anyway</string>

    <!-- Room -->
    <string name="list_members">List members</string>
    <string name="open_chat_header">Open header</string>
    <string name="room_sync_in_progress">Syncing…</string>
...
    <string name="no_valid_google_play_services_apk">No valid Google Play Services APK found. Notifications may not work properly.</string>

    <!-- Passphrase -->
    <string name="passphrase_create_passphrase">Create passphrase</string>
    <string name="passphrase_confirm_passphrase">Confirm passphrase</string>
    <string name="passphrase_enter_passphrase">Enter passphrase</string>
    <string name="passphrase_passphrase_does_not_match">Passphrase doesn’t match</string>
    <string name="passphrase_empty_error_message">Please enter a passphrase</string>
    <string name="passphrase_passphrase_too_weak">Passphrase is too weak</string>

    <!-- Key Backup -->

    <!-- Note to translators: the translation MUST contain the string "${app_name}", which will be replaced by the application name -->
...
    <!-- %s will be replaced by recovery_passphrase -->
    <string name="bootstrap_info_text">Secure &amp; unlock encrypted messages and trust with a %s.</string>
    <!-- %s will be replaced by recovery_passphrase -->
    <string name="bootstrap_info_confirm_text">Enter your %s again to confirm it.</string>
    <string name="bootstrap_dont_reuse_pwd">Don’t use your account password.</string>

    <string name="bootstrap_info_text_2">Enter a security phrase only you know, used to secure secrets on your server.</string>

    <string name="bootstrap_loading_text">This might take several seconds, please be patient.</string>
    <string name="bootstrap_loading_title">Setting up recovery.</string>
    <string name="your_recovery_key">Your recovery key</string>
    <string name="bootstrap_finish_title">"You're done!"</string>
    <string name="keep_it_safe">Keep it safe</string>
...
    <string name="bottom_sheet_setup_secure_backup_security_key_title">Use a Security Key</string>
    <string name="bottom_sheet_setup_secure_backup_security_key_subtitle">Generate a security key to store somewhere safe like a password manager or a safe.</string>
    <string name="bottom_sheet_setup_secure_backup_security_phrase_title">Use a Security Phrase</string>
    <string name="bottom_sheet_setup_secure_backup_security_phrase_subtitle">Enter a secret phrase only you know, and generate a key for backup.</string>

    <string name="bottom_sheet_save_your_recovery_key_title">Save your Security Key</string>
    <string name="bottom_sheet_save_your_recovery_key_content">Store your Security Key somewhere safe, like a password manager or a safe.</string>

    <string name="set_a_security_phrase_title">Set a Security Phrase</string>
    <string name="set_a_security_phrase_notice">Enter a security phrase only you know, used to secure secrets on your server.</string>
    <string name="set_a_security_phrase_hint">Security Phrase</string>
    <string name="set_a_security_phrase_again_notice">Enter your Security Phrase again to confirm it.</string>

...
