...
        android:minHeight="50dp"
        app:actionTitle="@string/bottom_sheet_setup_secure_backup_submit"
        app:rightIcon="@drawable/ic_arrow_right"
        app:tint="?colorSecondary" />

    <im.vector.app.core.ui.views.BottomSheetActionButton
        android:id="@+id/bootstrapSetupSecureUseSecurityKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:visibility="gone"
        app:actionDescription="@string/bottom_sheet_setup_secure_backup_security_key_subtitle"
        app:actionTitle="@string/bottom_sheet_setup_secure_backup_security_key_title"
...
        android:layout_height="1dp"
        android:background="?vctr_list_separator_on_surface"
        android:visibility="gone"
        tools:visibility="visible" />

    <im.vector.app.core.ui.views.BottomSheetActionButton
        android:id="@+id/bootstrapSetupSecureUseSecurityPassphrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:visibility="gone"
        app:actionDescription="@string/bottom_sheet_setup_secure_backup_security_phrase_subtitle"
        app:actionTitle="@string/bottom_sheet_setup_secure_backup_security_phrase_title"
...
